# llm-tts-factory

./: .gitignore  README.md  TRAINING_GUIDE.md  codec_dataset.py  codec_train.py  config.yaml  dataset_e2e.py  generate_dataset.py  generate_dataset_from_lists.py  pyproject.toml  resume_training.py  sanitize_dataset.py  simple_inference.py  train_decoder.py  train_llm.py
utils/: audio_utils.py  config_loader.py
